fix: typo in site and disable plugin

--- a/src/overrides/Head.astro
+++ b/src/overrides/Head.astro
@@ -4,10 +4,9 @@ import Default from "@astrojs/starlight/components/Head.astro";
 
 // Get the URL of the generated image for the current page using its
 // ID and replace the file extension with `.png`.
-const ogImageUrl = new URL(
-  `/og/${Astro.props.id.replace(/\.\w+$/, ".png")}`,
-  Astro.site
-);
+const ogImageUrl = Astro.site
+  ? new URL(`/og/${Astro.props.id.replace(/\.\w+$/, ".png")}`, Astro.site).href
+  : "";
 ---
 
 <!-- Render the default <Head/> component. -->
