feat: site deSolvro-lified

--- a/src/overrides/SocialIcons.astro
+++ b/src/overrides/SocialIcons.astro
@@ -3,8 +3,12 @@ import type { Props } from "@astrojs/starlight/props";
 import Default from "@astrojs/starlight/components/SocialIcons.astro";
 ---
 
-<a href="https://solvro.pwr.edu.pl" rel="me" class="sl-flex">
-  <span class="sr-only">Strona solvro</span>
+<a
+  href="https://larvixon-zpi.github.io/larvixon-frontend"
+  rel="me"
+  class="sl-flex"
+>
+  <span class="sr-only">LarvixON AI documentation</span>
   <svg
     xmlns="http://www.w3.org/2000/svg"
     width="16"
