chore: rename LarvixON AI to LarvixON

--- a/src/overrides/SocialIcons.astro
+++ b/src/overrides/SocialIcons.astro
@@ -8,7 +8,7 @@ import Default from "@astrojs/starlight/components/SocialIcons.astro";
   rel="me"
   class="sl-flex"
 >
-  <span class="sr-only">LarvixON AI documentation</span>
+  <span class="sr-only">LarvixON documentation</span>
   <svg
     xmlns="http://www.w3.org/2000/svg"
     width="16"
